welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: ')' expected but integer literal found.
recule(Buggle 1)
              ^